--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Оставьте свой отзыв</title>
+  <link rel="icon" href="favicon-32x32.ico">
+  <link rel="icon" href="img/favicons/favicon-32x32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/favicon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,7 +20,7 @@
     <header class="page__header main-header">
 
       <!--Логотип сайта-->
-      <a class="main-header__logo-link logo" href="index.html" tabindex="3">
+      <a class="main-header__logo-link logo" href="index.html">
         <img class="logo__image" src="img/logo/logo.svg" width="185" height="96" alt="Логотип города Седона.">
       </a>
 
@@ -29,10 +33,10 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="index.html" tabindex="1">Главная</a>
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="catalog.html" tabindex="2">Фото и видео</a>
+              <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link main-navigation__link--current" href="form.html" aria-current="page">Форма
@@ -76,23 +80,23 @@
               <ul class="form__field-list">
                 <li class="form__field-item">
                   <label class="form__field-label form-field">
-                    <span class="form-field__text">Имя*:</span>
-                    <input class="form-field__input input" type="text" name="name" placeholder="Ваше имя" value="Пётр"
-                      required>
+                    <span class="form__field-text form-field__text">Имя*:</span>
+                    <input class="form__field-input form-field__input input" type="text" name="name"
+                      placeholder="Ваше имя" value="Пётр" required>
                   </label>
                 </li>
                 <li class="form__field-item">
                   <label class="form__field-label form-field">
-                    <span class="form-field__text">Фамилия*:</span>
-                    <input class="form-field__input input" type="text" name="surname" placeholder="Ваша фамилия"
-                      value="Пустота" required>
+                    <span class="form__field-text form-field__text">Фамилия*:</span>
+                    <input class="form__field-input form-field__input input" type="text" name="surname"
+                      placeholder="Ваша фамилия" value="Пустота" required>
                   </label>
                 </li>
                 <li class="form__field-item">
                   <label class="form__field-label form-field">
-                    <span class="form-field__text">Отчество:</span>
-                    <input class="form-field__input input" type="text" name="patronymic" placeholder="Ваше отчество"
-                      value="Викторович">
+                    <span class="form__field-text form-field__text">Отчество:</span>
+                    <input class="form__field-input form-field__input input" type="text" name="patronymic"
+                      placeholder="Ваше отчество" value="Викторович">
                   </label>
                 </li>
               </ul>
@@ -103,18 +107,19 @@
               <legend class="form__group-title title">Контактная информация:</legend>
               <ul class="form__field-list">
                 <li class="form__field-item">
-                  <label class="form__field-label form-field">
-                    <span class="form-field__text">Контактный телефон*:</span>
-                    <input class="form-field__input input input--phone" type="tel" name="phone"
+                  <!-- Если input неактивен, добавить у label класс disabled -->
+                  <label class="form__field-label form-field form-field--phone">
+                    <span class="form__field-text form-field__text">Контактный телефон*:</span>
+                    <input class="form__field-input form-field__input input" type="tel" name="phone"
                       placeholder="Введите телефон" title="введите 11 цифр без пробелов. Например: 88005558628"
                       required>
                   </label>
                 </li>
                 <li class="form__field-item">
-                  <label class="form__field-label form-field">
-                    <span class="form-field__text">Электронная почта*:</span>
+                  <label class="form__field-label form-field form-field--mail">
+                    <span class="form__field-text form-field__text">Электронная почта*:</span>
                     <!-- Если не указаны данные в поле ввода, добавить класс input--error -->
-                    <input class="form-field__input input input--mail" type="email" name="email"
+                    <input class="form__field-input form-field__input input" type="email" name="email"
                       placeholder="Введите e-mail" title="email@example.com" required>
                   </label>
                 </li>
@@ -123,27 +128,27 @@
           </div>
 
           <!-- Общее впечатление -->
-          <fieldset class="form__group">
+          <fieldset class="form__group form__group--decoration">
             <legend class="form__group-title title">Ваше общее впечатление:</legend>
-            <ul class="form__control-list">
+            <ul class="form__control-list form__control-list--impression">
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--radio" type="radio"
-                    name="impression" value="rather-positive" checked>
+                <label class="form__control-label form-control form-control--radio">
+                  <input class="visually-hidden form-control__input" type="radio" name="impression"
+                    value="rather-positive" checked>
                   <span class="form-control__text">Скорее положительное</span>
                 </label>
               </li>
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--radio" type="radio"
-                    name="impression" value="rather-negative">
+                <label class="form__control-label form-control form-control--radio">
+                  <input class="visually-hidden form-control__input" type="radio" name="impression"
+                    value="rather-negative">
                   <span class="form-control__text">Скорее отрицательное</span>
                 </label>
               </li>
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--radio" type="radio"
-                    name="impression" value="hard-to-answer">
+                <label class="form__control-label form-control form-control--radio">
+                  <input class="visually-hidden form-control__input" type="radio" name="impression"
+                    value="hard-to-answer">
                   <span class="form-control__text">Затрудняюсь ответить</span>
                 </label>
               </li>
@@ -151,34 +156,31 @@
           </fieldset>
 
           <!-- Посещенные достопримечательности -->
-          <fieldset class="form__group">
-            <legend class="form__group-title title">Посещенные достопримечательности:</legend>
-            <ul class="form__control-list">
+          <fieldset class="form__group form__group--decoration">
+            <legend class="form__group-title title">Посещенные <br>достопримечательности:</legend>
+            <ul class="form__control-list form__control-list--attractions">
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--checkbox" type="checkbox"
-                    name="devils-bridge" checked>
+                <!-- Если input неактивен, добавить у label класс disabled -->
+                <label class="form__control-label form-control form-control--checkbox">
+                  <input class="visually-hidden form-control__input" type="checkbox" name="devils-bridge" checked>
                   <span class="form-control__text">Мост Дьявола</span>
                 </label>
               </li>
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--checkbox" type="checkbox"
-                    name="mount-bell" checked>
+                <label class="form__control-label form-control form-control--checkbox">
+                  <input class="visually-hidden form-control__input" type="checkbox" name="mount-bell" checked>
                   <span class="form-control__text">Гора-Колокол</span>
                 </label>
               </li>
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--checkbox" type="checkbox"
-                    name="slide-park" checked>
+                <label class="form__control-label form-control form-control--checkbox">
+                  <input class="visually-hidden form-control__input" type="checkbox" name="slide-park" checked>
                   <span class="form-control__text">Слайд-парк</span>
                 </label>
               </li>
               <li class="form__control-item">
-                <label class="form__control-label form-control">
-                  <input class="visually-hidden form-control__input form-control__input--checkbox" type="checkbox"
-                    name="red-rocks">
+                <label class="form__control-label form-control form-control--checkbox">
+                  <input class="visually-hidden form-control__input" type="checkbox" name="red-rocks">
                   <span class="form-control__text">Красные скалы</span>
                 </label>
               </li>
@@ -186,13 +188,12 @@
           </fieldset>
 
           <!-- Ваши эмоции -->
-          <div class="form__field-wrapper">
-            <label class="form__field-label form-field form-field--textarea">
-              <span class="form-field__text title">Опишите свои эмоции:</span>
-              <textarea class="form-field__input input input--textarea" name="emotions"
-                placeholder="Опишите подробно все свои восторги"></textarea>
-            </label>
-          </div>
+          <fieldset class="form__group form__group--last form__group--decoration">
+            <legend class="form__group-title title">Опишите свои эмоции:</legend>
+            <label class="form__field-label form-field visually-hidden" for="form-field-emotions">Ваши эмоции.</label>
+            <textarea class="form__field-input form__field-input--textarea form-field__input input input--textarea"
+              id="form-field-emotions" name="emotions" placeholder="Опишите подробно все свои восторги"></textarea>
+          </fieldset>
 
           <div class="form__button-wrapper">
             <!-- Кнопка отправки -->
@@ -239,10 +240,9 @@
           rel="nofollow noopener">
           <span class="develop__text description">Разработано</span>
           <svg class="develop__icon-logo-htmlacademy" aria-hidden="true" focusable="false" width="29" height="35"
-            viewBox="0 0 29 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            viewBox="0 0 29 35" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
             <path
-              d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z"
-              fill="#000" />
+              d="M14.65.45h-.1l-13.5 1.4v24.7l13.5 8 13.4-8V1.85L14.65.45Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z" />
           </svg>
           <span class="visually-hidden">Логотип сайта HTML Academy.</span>
         </a>
